# UPB-PCLP1

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  board_utils.c  board_utils.h  codeinvim.c  gigel_and_the_checkboard.c  image.c  image.h  infinite_product.c  install.sh  instructions.c  instructions.h  main.c  math_util.c  math_util.h  math_utils.c  math_utils.h  mem.dump  mem.sh  my_octave  namogram_utils.c  namogram_utils.h  nanogram_checker.c  nanogram_utils.c  nomogram.c  points_utils.c  points_utils.h  punctaje_util.c  punctaje_util.h  registry_manager.c  registry_manager.h  run  state_manager.c  state_manager.h  statics.h  string_utils.c  string_utils.h  (+4 more)
check_utils/: checks.py
cs/: README.md  checkpatch.pl  cs.sh
cs/tests/: 01-BRACES.c  02-SUSPECT_CODE_INDENT.c  04-BLANK_LINES.c  05-TABS.c  06-TRAILING_WHITESPACE.c  08-EXTRA_WHITESPACE.c
output/: c_1_5.pgm  c_1_7.pgm  c_1_7a.pgm  c_2_2.ppm  c_2_3.ppm  c_e_5.pgm  ci_1_1.pgm  ci_1_12.ppm  ci_1_12a.ppm  ci_1_2.pgm  ci_1_3.pgm  ci_1_4.pgm  ci_1_5.pgm  ci_1_5a.pgm  ci_2_2.pgm  ci_3_2.pgm  dummy  s_e_2.pgm  ss_g_aa_1a.ppm  ss_g_aa_2a.ppm  ss_g_aa_3a.ppm  ss_g_aa_4a.ppm  ss_g_ab_2.ppm  ss_g_ab_3.ppm  ss_g_ab_4.ppm  ss_g_ba_2a.ppm  ss_g_ba_3a.ppm  ss_g_ba_4a.ppm  ss_g_bb_1.ppm  ss_g_bb_3.ppm  ss_g_bb_5.ppm  ss_r-180_aa_4a.pgm  ss_r-180_aa_4a.ppm  ss_r-180_aa_5a.pgm  ss_r-180_aa_5a.ppm  ss_r-180_ab_4.pgm  ss_r-180_ab_4.ppm  ss_r-180_ab_5.pgm  ss_r-180_ab_5.ppm  ss_r-180_ba_4a.pgm  (+81 more)
src/: main.rs
tasks/: config.json
tasks/codeinvim/: grader
tasks/gigel_and_the_checkboard/: grader
(+106 files in other folders)
